# social-feed-analyser

./: .env.example  .gitignore  README.md  accounts-full.csv  accounts.csv  docker-compose.yml  pyproject.toml
scripts/: init_weaviate.py  test_api_connection.py  test_components.py  test_twitter_storage.py
twitter_sentiment/: __init__.py  config.py  main.py
twitter_sentiment/components/: analyzer.py  monitor.py  notifier.py  scheduler.py  storage.py
twitter_sentiment/utils/: csv_loader.py
